# controller_crutches

./: .gitignore  CMakeLists.txt  README.md  package.xml  toolchain.cmake
cmake/: Eigen3Config.cmake  FindMsgpack.cmake
include/: Action.h  BallFollower.h  BallSearcher.h  BallTracker.h  BaseCamera.h  BaseModule.h  Buttons.h  CM730.h  CM730robot.h  CM730vrep.h  Camera.h  Color.h  ColorFinder.h  DARwIn.h  FSR.h  Field.h  GameController.h  GoTo.h  GoalieBehavior.h  Head.h  Image.h  ImgProcess.h  Kinematics.h  LEDs.h  LinuxActionScript.h  LinuxCM730.h  LinuxCamera.h  LinuxDARwIn.h  LinuxMotionTimer.h  LinuxNetwork.h  MX28.h  MotionModule.h  OdoData.h  OdometryCollector.h  Plane.h  Point.h  Pose2D.h  PropertyReader.h  RobotApplication.h  RobotCM730.h  (+32 more)
include/behavior/: BaseBehavior.h  Behavior.h  ball_filter.h  ball_follower_t.h  ball_searcher_t.h  ball_tracker_t.h  base_behavior_t.h  behavior_t.h  go_to_t.h  image_processing_behavior_t.h  soccer_behavior_t.h
include/config/: ActionConfigurationFileLoader.h  ArgumentsParser.h  ArgumentsParsingStrategy.h  BallSearcherConfigurationStrategy.h  BallTrackerConfigurationStrategy.h  CommandArguments.h  ConfigurationFileLoader.h  ConfigurationParser.h  ConfigurationStrategy.h  GameControllerConfigurationStrategy.h  HeadConfigurationStrategy.h  MotionManagerConfigurationStrategy.h  SingleOptionArgumentsParsingStrategy.h  WalkingConfigurationStrategy.h  action_configuration_file_loader_t.h  arguments_parser_t.h  arguments_parsing_strategy_t.h  command_arguments_t.h  configuration_file_loader_t.h  configuration_parser_t.h  configuration_strategy_t.h  property_reader_t.h  single_option_arguments_parsing_strategy_t.h
include/detectors/: AngleDetector.h  BallDetector.h  BaseDetector.h  FieldDetector.h  LineDetector.h
include/game_controller/: game_controller_t.h  robo_cup_game_control_data_t.h  spl_coach_message.h  spl_standard_message.h
include/gamecontroller/: GameController.h  game_controller_t.h  spl_coach_message.h
include/hw/: Buttons.h  CM730.h  CM730_t.h  FSR.h  FSR_t.h  LEDs.h  LEDs_t.h  LinuxCM730.h  LinuxMotionTimer.h  MX28_t.h  VrepCM730.h  buttons_t.h  camera_t.h  image_source_failure.h  image_source_t.h  linux_CM730_t.h  linux_motion_timer_t.h  robot_CM730_t.h  robot_image_source_t.h  vrep_CM730_t.h  vrep_connector_t.h  vrep_image_source_t.h
include/localization/: LocalizationUtil.h  ParticleFilter.h  data_reader.h  field_map_t.h  line_t.h  localization_t.h  localization_util_t.h  particle_filter_t.h
include/log/: ColouredSink.h  Console.h  Logger.h  coloured_sink_t.h  console.h  trivial_logger_t.h  сoloured_sink_t.h
include/math/: AngleTools.h  Eigen.h  Matrix.h  Point.h  Vector.h  angle_tools.h  eigen.h  matrix_t.h  point_t.h  vector3d_t.h  vector_3D_t.h
include/minIni/: minGlue.h  minIni.h  wxMinIni.h
include/motion/: JointData.h  Kinematics.h  MotionManager.h  MotionModule.h  MotionStatus.h  joint_data_t.h  kinematics_t.h  motion_manager_t.h  motion_module_t.h  motion_status_t.h  odometry_collector_t.h  pose2d_t.h
include/net/: connection_holder_t.h  connection_manager_t.h  connection_t.h  packet_header_t.h  request_handler_t.h  request_parser_t.h  request_t.h  server_listener_t.h  server_t.h
include/streamer/: httpd.h  jpeg_utils.h  mjpg_streamer.h
include/tool/: Accumulator.h  Rate.h  accumulator_t.h  rate_t.h  time_based_holder_t.h
include/vision/: Vision.h  VisionUtils.h  camera_t.h  vision_processor_t.h  vision_t.h  vision_utils.h  white_ball_vision_processor_t.h
res/: ball_ann_ver4_5.xml  ball_ann_ver5.xml  big_ball_cascade_ver2.xml  big_ball_cascade_ver3.xml  cascade_big_ball.xml  config.ini  new_cascade.xml  soccer_ball_cascade.xml  soccer_ball_cascade_ver2.xml  vision.json
res/vision_cfg/: BallDetector.ini  FieldDetector.ini  LineDetector.ini  Vision.ini
src/: BallFollower.cpp  BallSearcher.cpp  BallTracker.cpp  BaseModule.cpp  Buttons.cpp  CM730.cpp  CM730robot.cpp  CM730vrep.cpp  Color.cpp  Field.cpp  GameController.cpp  GoTo.cpp  GoalieBehavior.cpp  LEDs.cpp  LinuxActionScript.cpp  LinuxCM730.cpp  LinuxCamera.cpp  LinuxMotionTimer.cpp  LinuxNetwork.cpp  MX28.cpp  OdoData.cpp  OdometryCollector.cpp  Pose2D.cpp  PropertyReader.cpp  RobotApplication.cpp  RobotCM730.cpp  ServiceInterface.cpp  ServiceLocator.cpp  SoccerBehavior.cpp  Speech.cpp  StateMachine.cpp  StatusCheck.cpp  UdpComm.cpp  VREPCamera.cpp  Vision.cpp  VisionMode.cpp  VisionUtils.cpp  VrepCM730.cpp  VrepConnector.cpp  ball_follower_t.cpp  (+16 more)
src/behavior/: BaseBehavior.cpp  ball_filter.cpp  ball_follower_t.cpp  ball_searcher_t.cpp  ball_tracker_t.cpp  base_behavior_t.cpp  go_to_t.cpp  image_processing_behavior_t.cpp  soccer_behavior_t.cpp
src/config/: ActionConfigurationFileLoader.cpp  ArgumentsParser.cpp  BallSearcherConfigurationStrategy.cpp  BallTrackerConfigurationStrategy.cpp  CommandArguments.cpp  ConfigurationFileLoader.cpp  ConfigurationParser.cpp  ConfigurationStrategy.cpp  GameControllerConfigurationStrategy.cpp  HeadConfigurationStrategy.cpp  MotionManagerConfigurationStrategy.cpp  SingleOptionArgumentsParsingStrategy.cpp  WalkingConfigurationStrategy.cpp  action_configuration_file_loader_t.cpp  arguments_parser_t.cpp  command_arguments_t.cpp  configuration_file_loader_t.cpp  configuration_parser_t.cpp  property_reader_t.cpp  single_option_arguments_parsing_strategy_t.cpp
src/detectors/: AngleDetector.cpp  BallDetector.cpp  BaseDetector.cpp  FieldDetector.cpp  LineDetector.cpp
src/game_controller/: game_controller_t.cpp  udp_comm_t.cpp
src/gamecontroller/: GameController.cpp  game_controller_t.cpp
src/hw/: Buttons.cpp  CM730.cpp  CM730_t.cpp  LEDs.cpp  LEDs_t.cpp  LinuxCM730.cpp  LinuxMotionTimer.cpp  RobotCM730.cpp  VrepCM730.cpp  VrepConnector.cpp  buttons_t.cpp  camera_t.cpp  image_source_failure.cpp  linux_CM730_t.cpp  linux_motion_timer_t.cpp  robot_CM730_t.cpp  robot_image_source_t.cpp  vrep_CM730_t.cpp  vrep_connector_t.cpp  vrep_image_source_t.cpp
src/localization/: DataReader.cpp  LocalizationUtil.cpp  ParticleFilter.cpp  data_reader.cpp  field_map_t.cpp  line_t.cpp  localization_t.cpp  (+4 more)
(+158 files in other folders)
